binrw/tests/ui/derive_binwrite_with_temp.stderr
error: The attribute `temp` removes this field, but this is not possible under the derive macro. Try using `#[binwrite]` instead of `#[derive(BinWrite)]`.
 --> $DIR/derive_binwrite_with_temp.rs:5:5
  |
5 | /     #[bw(calc = 0u8)]
6 | |     a: u8,
  | |_________^
